# dingtalk-bot

dingtalk-bot/: .env.example  .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
dingtalk-bot/app/: candidate_store.py  config.py  dependencies.py  dingtalk_stream.py  group_events.py  main.py
dingtalk-bot/app/api/: admin.py  health.py  webhook.py
dingtalk-bot/app/core/dingtalk/: client.py  constants.py
dingtalk-bot/app/core/llm/: base.py  claude.py  factory.py
dingtalk-bot/app/core/message/: builder.py  handler.py  parser.py
dingtalk-bot/app/core/message/plugins/: __init__.py  base.py  echo.py  help.py  llm_chat.py  register.py
dingtalk-bot/app/core/session/: manager.py  store.py  store_redis.py
dingtalk-bot/app/models/: dingtalk.py  message.py  session.py
dingtalk-bot/app/utils/: logger.py
dingtalk-bot/docker/: Dockerfile  docker-compose.yml
dingtalk-bot/tests/: conftest.py  test_client.py  test_handlers.py  test_llm.py  test_session.py
