[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dingtalk-bot"
version = "0.1.0"
description = "钉钉智能对话机器人 - 基于 FastAPI + Claude API 的企业级对话客服"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Developer"},
]

dependencies = [
    "fastapi>=0.115.0,<0.116.0",
    "uvicorn[standard]>=0.30.0,<0.31.0",
    "pydantic>=2.9.0,<3.0.0",
    "pydantic-settings>=2.5.0,<3.0.0",
    "httpx>=0.27.0,<0.28.0",
    "pycryptodome>=3.20.0,<4.0.0",
    "anthropic>=0.45.0,<1.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "python-multipart>=0.0.12,<0.0.13",
    "tenacity>=9.0.0,<10.0.0",
]

[project.optional-dependencies]
redis = ["redis>=5.0.0,<6.0.0"]
dev = [
    "pytest>=8.0.0,<9.0.0",
    "pytest-asyncio>=0.24.0,<0.25.0",
    "pytest-cov>=5.0.0,<6.0.0",
    "ruff>=0.6.0,<0.7.0",
    "mypy>=1.11.0,<2.0.0",
    "respx>=0.21.0,<0.22.0",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["app"]
